<resources>
    <string name="app_name">Chat</string>
    <string name="welcome_message">Chat\'a Hoş Geldiniz</string>
    <string name="register_message">Kayıt için doğru yerdesiniz</string>
    <string name="input_mail_hint">Mail adresinizi buraya giriniz...</string>
    <string name="input_name_hint">Adınızı ve soyadınızı buraya giriniz...</string>
    <string name="input_nickname_hint">Kullanıcı adınızı buraya giriniz...</string>
    <string name="input_password_hint">Şifrenizi buraya giriniz...</string>
    <string name="input_password_verification_hint">Şifrenizi buraya tekrar giriniz...</string>
    <string name="sing_in_button">Giriş</string>
    <string name="register_button">Kayıt Ol</string>
    <string name="completeRegistration">Kaydı Tamamla</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="sign_up">Henüz kayıtlı değil misin? Şimdi kaydol!</string>
    <string name="sign_in_from_register">Kaydın var mı? Şimdi giriş yap!</string>
    <string name="nickname_is_useble">Kullanıcı adı kullanıma uygundur.</string>
    <string name="mail_is_useble">Mail adresi kullanıma uygundur.</string>
    <string name="password_is_useble">Şifreler uyuştu.</string>
    <string name="forgat_password">Şifremi unuttum</string>
    <string name="position_register">Pozisyonunuzu seçiniz</string>
    <string name="edittext_name_not_null">Ad-soyad alanı boş bırakılamaz</string>
    <string name="edittext_nickname_not_null">Kullanıcı adı alanı boş bırakılamaz</string>
    <string name="edittext_mail_not_null">Mail adresi alanı boş bırakılamaz</string>
    <string name="edittext_password_not_null">Şifre alanı boş bırakılamaz</string>
    <string name="edittext_password_verification_not_null">Şifre doğrulama alanı boş bırakılamaz</string>
    <string name="password_verification_error">Şifreler uyuşmuyor! Lütfen şifre bölümlerini yeniden doldurunuz</string>
    <string name="mail_registered_already">Mail adresiniz önceden kaydedilmiş! Eğer kayıt işlemini başkalarının yaptığını düşünüyorsanız bizimle iletişime geçiniz. </string>
    <string name="nickname_registered_already">Bu kullanıcı adı daha önceden kullanılmış! Lüften başka bir kullanıcı adı girmeyi deneyin</string>
    <string name="please_select_position">Lüften pozisyonunuzu seçiniz!</string>
    <string name="alert_dialog_positive_button_OK">Tamam</string>
    <string name="congrulation">Tebrikler</string>
    <string name="alert_dialog_message_registrationIsOK_and_mail_verification_sent">Son bir adım kaldı! E-mail hesabınıza doğrulama maili gönderildi.Gelen maildeki linke tıklayarak hesabınızı doğrulayın ve tekrar buraya gelip Kaydı Tamamla\'ya tıklayınız.</string>
    <string name="error">Hata!</string>
    <string name="registration_failure">Kayıt başarısız oldu! Lütfen daha sonra tekrar deneyiniz. Aynı hatayı tekrar alırsanız lütfen bizimle iletişime geçiniz.</string>
    <string name="alert_dialog_message_registrationIsOK_and_mail_verification_not_sent">Kaydın tamamlanabilmesi için e-mail hesabınıza doğrulama maili gönderilemedi. Lütfen tekrardan doğrulama maili gönderilmesini deneyin.</string>
    <string name="button_send_verification_mail">Hesap Dogrulama Maili Gönder</string>
    <string name="sent_verification_mail">Hesap doğrulama maili e-mail adresinize başarıyla gönderildi.</string>
    <string name="not_sent_verification_mail">Hata! Hesap doğrulama maili e-mail adresinize gönderilemedi!</string>
    <string name="cancel">İptal</string>
    <string name="sing_in_is_succesfull">Giriş başarılı</string>
    <string name="alert_dialog_message_mail_is_not_verified">E-posta adresiniz doğrulanmamış! Lütfen mail kutunuzu kontrol ediniz. Dogrulama maili gelmemiş ise tekrar gönderiniz.</string>
    <string name="error_sign_in">Kullanıcı adı veya şifre hatalı. Şifremi unuttum\' a tıklayarak şifrenizi yenileyebilirsiniz. Bilgilerinizin doğruluğundan eminseniz internet bağlantınızı kontrol ediniz veya sistemsel bir sorun olabilir. Daha sonra tekrar deneyiniz. Detaylı bilgi için bizimle iletişime geçiniz.</string>
    <string name="edittext_password_lenght_not_short_to_seven">Şifreniz en az 6 karakterden oluşmalıdır!</string>
    <string name="edittext_mail_format_not_correct">Lütfen mail adresinizi kontol ediniz. Adress formata uygun değildir. Örneğin example@address.com şeklinde olmalıdır.</string>
    <string name="plesase_write_message">Lütfen mesajınızı yazınız!</string>
    <string name="sent">Gönderildi</string>
    <string name="completed_the_registration">Kayıt tamamlandı.Yöneticinin kaydınızı onaylamasını bekleyiniz.Onay maili tarafınıza ulaştıktan sonra giriş yaparak uygulamayı kullanmaya başlayabilirsiniz.</string>
    <string name="email_doesnt_verifiy_send_again">Email adresiniz henüz doğrulanmamış. Kaydın tamamlanabilmesi için email adresinize gelen hesap doğrulama mailindeki bağlantıya tıklayınız. Eğer doğrulama maili gelmediyse tekrar gönderim yapınız.</string>
    <string name="admin_is_not_verify_your_account">Yönetici üyeliğinizi henüz onaylamamış! Bir sorun olduğunu düşünüyorsanız bizimle iletişime geçiniz.</string>
    <string name="you_are_missing_in_records">Kayıtlarda yoksunuz! Kayıt yaptırdığınıza eminseniz detaylı bilgi için bizimle iletişime geçiniz.</string>
    <string name="accept">Kabul Et</string>
    <string name="reject">Reddet</string>
    <string name="send_message_request">Mesaj İsteği Gönder</string>
    <string name="send_add_person_request">Kişi Ekleme İsteği Gönder</string>
    <string name="friendship_request">Arkadaşlık İstekleri</string>
    <string name="send_message">Mesaj Gönder</string>
    <string name="new_message">Yeni Mesaj</string>

</resources>
