<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcome_text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message"
                android:layout_marginTop="60dp"
                android:layout_centerHorizontal="true"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:textColor="@android:color/holo_red_dark"
                android:layout_alignParentTop="true"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edittex_mail_login"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white"
                android:layout_below="@+id/welcome_text_login"
                android:hint="@string/input_mail_hint"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edittex_password_login"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:inputType="textVisiblePassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white"
                android:layout_below="@+id/edittex_mail_login"
                android:hint="@string/input_password_hint"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_remember_me_login"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/remember_me"
                android:layout_below="@id/edittex_password_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:textColor="@android:color/black"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_sign_in_login"
                android:text="@string/sing_in_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:layout_below="@id/checkbox_remember_me_login"
                android:layout_centerHorizontal="true"
                android:background="@android:color/white"
                style="@style/TextAppearance.AppCompat.Large.Inverse"
                android:textColor="@android:color/black"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_forgot_password_login"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/forgat_password"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@android:color/transparent"
                android:layout_below="@id/button_sign_in_login"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_sign_up_login"
                android:text="@string/sign_up"
                android:layout_below="@id/button_forgot_password_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:background="@android:color/transparent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"/>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>



</RelativeLayout>